--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^3.14.0",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-bundle-assets": "^2.27.1",
     "webpack": "^1.14.0"
   }
