--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-bundle-assets": "^2.27.1",
     "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
+    "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon": "^1.0.5",
