--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:live": "karma start",
     "build:demo": "webpack ",
     "build:bower": "gulp bundle",
-    "bump-version": "yarn --no-git-tag-version version ",
+    "bump-version": "npm --no-git-tag-version version ",
     "preversion": "git-branch-is develop && yarn test",
     "version": "yarn run build:demo",
     "make-release": "git-branch-is develop && git flow release start $npm_package_version && git flow release finish $npm_package_version"
@@ -30,6 +30,7 @@
     "gulp-bundle-assets": "^2.27.1",
     "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
+    "karma-commonjs": "^1.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
