--- a/travis.yml
+++ b/travis.yml
@@ -15,3 +15,6 @@ install:
 
 script:
   - yarn test
+
+after_success:
+  - cat ./coverage/report-lcov/lcov.info | ./node_modules/coveralls/bin/coveralls.js
