--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ cache:
     - node_modules
     - $HOME/.cache # includes bowers cache
 
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+
 install:
   - yarn install --pure-lockfile
 
