--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Utilities for generating and drawing triangles",
   "main": "index.js",
   "scripts": {
+    "docs": "jsdoc -c jsdoc.conf.json",
     "test": "karma start --single-run",
     "test:live": "karma start",
     "build:demo": "webpack ",
@@ -26,6 +27,7 @@
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "git-branch-is": "^0.1.0",
+    "jsdoc": "^3.4.3",
     "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
     "karma-commonjs": "^1.0.0",
